--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -102,21 +102,51 @@
       <p style="margin-bottom: 15px;">Liez votre compte pour vous connecter en un clic :</p>
       <div style="display: flex; flex-direction: row; gap: 10px;">
         <%= button_to user_google_oauth2_omniauth_authorize_path, method: :post, data: { turbo: false }, class: "button", style: "display: flex; justify-content: center; align-items: center; gap: 10px; background-color: #fff; color: #202020; border: 1px solid #ddd;" do %>
-          <svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg"><path fill="#4285F4" d="M17.64 9.2c0-.637-.057-1.251-.164-1.84H9v3.481h4.844c-.209 1.125-.843 2.078-1.796 2.717v2.258h2.908c1.702-1.567 2.684-3.874 2.684-6.615z"/><path fill="#34A853" d="M9 18c2.43 0 4.467-.806 5.956-2.18l-2.908-2.259c-.806.54-1.837.86-3.048.86-2.344 0-4.328-1.584-5.036-3.711H.957v2.332A8.997 8.997 0 0 0 9 18z"/><path fill="#FBBC05" d="M3.964 10.71A5.41 5.41 0 0 1 3.682 9c0-.593.102-1.17.282-1.71V4.958H.957A8.996 8.996 0 0 0 0 9c0 1.452.348 2.827.957 4.042l3.007-2.332z"/><path fill="#EA4335" d="M9 3.58c1.321 0 2.508.454 3.44 1.345l2.582-2.58C13.463.891 11.426 0 9 0A8.997 8.997 0 0 0 .957 4.958L3.964 7.29C4.672 5.163 6.656 3.58 9 3.58z"/></svg>
           Lier mon compte Google
         <% end %>
         <%= button_to user_apple_omniauth_authorize_path, method: :post, data: { turbo: false }, class: "button", style: "display: flex; justify-content: center; align-items: center; gap: 10px; background-color: #000; color: #fff;" do %>
-          <svg width="18" height="18" viewBox="0 0 18 18" fill="#ffffff" xmlns="http://www.w3.org/2000/svg"><path d="M15.283 13.192c-.256.591-.56 1.136-.91 1.636-.478.682-.871 1.154-1.173 1.417-.467.43-.967.651-1.503.663-.385 0-.85-.11-1.39-.332-.543-.221-1.041-.332-1.497-.332-.478 0-.991.11-1.539.332-.549.221-.991.337-1.329.349-.515.021-1.027-.205-1.539-.682-.327-.285-.735-.773-1.224-1.465-.525-.739-.957-1.596-1.295-2.574-.362-1.056-.543-2.078-.543-3.068 0-1.134.245-2.111.735-2.931.385-.658.897-1.177 1.539-1.558.642-.381 1.335-.575 2.082-.588.408 0 .944.127 1.61.375.664.249 1.091.375 1.278.375.14 0 .614-.148 1.417-.443.759-.273 1.4-.387 1.925-.342 1.423.115 2.492.676 3.203 1.687-1.272.771-1.902 1.851-1.889 3.237.012 1.08.403 1.978 1.173 2.691.349.331.738.587 1.171.769-.094.273-.193.534-.298.784v.001zM12.019.356c0 .846-.291 1.636-.907 2.367-.743.869-1.642 1.372-2.617 1.292-.012-.101-.02-.208-.02-.32 0-.812.353-1.681.98-2.392.314-.36.712-.659 1.195-.898.482-.235.938-.365 1.367-.387.012.113.018.226.018.338h-.016z"/></svg>
           Lier mon compte Apple
         <% end %>
       </div>
     <% end %>
   </div>
+
   <h2><%= t('edit_profile.public_profile') %></h2>
   <p class="desc-profil"><%= t('edit_profile.public_desc') %></p>
+  
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true, data: { turbo: false } }) do |f| %>
     <div class="flex-form" style="margin-top: 32px;" data-controller="registration" data-registration-triggers-value='["etudiant", "enseignant"]'>
       <%= render "users/shared/error_messages", resource: resource %>
+      
+      <div class="field" style="display:flex; align-items:center; gap:20px;">
+        <div style="flex:1;">
+          <%= f.label :profile_image, "Photo de profil" %>
+          <%= f.file_field :profile_image, class: "form-control", accept: "image/*" %>
+        </div>
+        <div style="width:60px; height:60px; border-radius:50%; overflow:hidden; border:1px solid #ddd; display:flex; align-items:center; justify-content:center; background:#eee;">
+          <% if resource.profile_image.attached? %>
+            <%= image_tag resource.profile_image.variant(resize_to_fill: [100, 100]), style:"width:100%; height:100%; object-fit:cover;" %>
+          <% else %>
+            <span style="color:#888; font-size:20px;">?</span>
+          <% end %>
+        </div>
+      </div>
+
+      <div class="field">
+        <%= f.label :country_id, "Pays" %>
+        <%= f.collection_select :country_id,
+            Country.order(:country),
+            :id,
+            :country,
+            { prompt: "Sélectionnez votre pays" },
+            { 
+              class: "form-control", 
+              data: { 
+                controller: "select2",
+                select2_placeholder_value: "Sélectionnez votre pays"
+              } 
+            } %>
+      </div>
       <div class="field">
         <%= f.label t('edit_profile.first_name') %>
         <%= f.text_field :firstname, autocomplete: "firstname", placeholder: "Prénom" %>
@@ -132,6 +162,7 @@
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
+      
       <hr>
       <h2><%= t('edit_profile.private_profile') %></h2>
       <div class="field">
@@ -175,16 +206,9 @@
                 id: "password-field-1", 
                 data: { "show-password-target": "passwordField" } %>
           <button type="button" data-action="click->show-password#toggle" class="toggle-password">
-            <svg class="show-password-icon" data-show-password-target="showIcon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M15.9972 6.66699C10.5598 6.66699 5.6745 10.791 2.85984 15.311C2.73184 15.523 2.6665 15.7617 2.6665 16.0003C2.6665 16.239 2.7305 16.4777 2.8585 16.6897C5.6745 21.2097 10.5598 25.3337 15.9972 25.3337C21.5212 25.3337 26.3918 21.2137 29.1492 16.6763C29.2718 16.4683 29.3332 16.2337 29.3332 16.0003C29.3332 15.767 29.2718 15.5323 29.1492 15.3243C26.3918 10.787 21.5212 6.66699 15.9972 6.66699ZM15.9998 10.667C18.9438 10.667 21.3332 13.0563 21.3332 16.0003C21.3332 18.9443 18.9438 21.3337 15.9998 21.3337C13.0558 21.3337 10.6665 18.9443 10.6665 16.0003C10.6665 13.0563 13.0558 10.667 15.9998 10.667ZM15.9998 12.667C17.8398 12.667 19.3332 14.1603 19.3332 16.0003C19.3332 17.8403 17.8398 19.3337 15.9998 19.3337C14.1598 19.3337 12.6665 17.8403 12.6665 16.0003C12.6665 14.1603 14.1598 12.667 15.9998 12.667Z" fill="#202020"/>
-            </svg>
-            <svg class="hide-password-icon" data-show-password-target="hideIcon" style="display: none;" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <line x1="7.64315" y1="28.4933" x2="20.0066" y2="2.2608" stroke="#202020" stroke-width="3"/>
-              <path d="M22.1016 8.34375C25.0132 9.96161 27.4726 12.565 29.1494 15.3242C29.2719 15.5321 29.333 15.7668 29.333 16C29.333 16.2334 29.272 16.4688 29.1494 16.6768C26.392 21.2141 21.521 25.334 15.9971 25.334C15.3793 25.334 14.7692 25.2778 14.168 25.1768L15.9795 21.333C15.9863 21.333 15.9932 21.334 16 21.334C18.9439 21.3339 21.333 18.9439 21.333 16C21.3329 14.7041 20.8691 13.5162 20.0996 12.5918L22.1016 8.34375ZM15.9971 6.66699C17.1437 6.66699 18.2615 6.84701 19.3389 7.16895L17.5781 10.9053C17.0793 10.7508 16.5494 10.667 16 10.667C13.0561 10.667 10.6672 13.0561 10.667 16C10.667 17.864 11.6252 19.5052 13.0752 20.459L11.2617 24.3047C7.797 22.8028 4.8234 19.8435 2.8584 16.6895C2.73049 16.4775 2.66602 16.2386 2.66602 16C2.66607 15.7615 2.73143 15.5225 2.85938 15.3105C5.67402 10.7906 10.5598 6.66706 15.9971 6.66699ZM19.0859 14.7422C19.2445 15.1305 19.333 15.5549 19.333 16C19.333 17.494 18.3484 18.7594 16.9932 19.1826L19.0859 14.7422ZM16 12.667C16.244 12.667 16.4818 12.6933 16.7109 12.7432L13.9414 18.6201C13.1659 18.0094 12.667 17.0629 12.667 16C12.6672 14.1601 14.1601 12.667 16 12.667Z" fill="#202020"/>
-            </svg>
-          </button>
+            </button>
         </div>
-        <i>Votre mot de passe doit comporter au moins 6 caractères, incluant une majuscule, une minuscule, un chiffre et un caractère spécial.</i>
+        <i>Votre mot de passe doit comporter au moins 6 caractères...</i>
       </div>
       <div class="field ">
         <%= f.label t('edit_profile.password_confirmation') %>
@@ -194,18 +218,11 @@
         autocomplete: "new-password", 
         id: "password-field-2", 
         data: { "show-password-target": "passwordField" } %>
-          <button type="button" 
-          data-action="click->show-password#toggle" class="toggle-password">
-            <svg class="show-password-icon" data-show-password-target="showIcon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M15.9972 6.66699C10.5598 6.66699 5.6745 10.791 2.85984 15.311C2.73184 15.523 2.6665 15.7617 2.6665 16.0003C2.6665 16.239 2.7305 16.4777 2.8585 16.6897C5.6745 21.2097 10.5598 25.3337 15.9972 25.3337C21.5212 25.3337 26.3918 21.2137 29.1492 16.6763C29.2718 16.4683 29.3332 16.2337 29.3332 16.0003C29.3332 15.767 29.2718 15.5323 29.1492 15.3243C26.3918 10.787 21.5212 6.66699 15.9972 6.66699ZM15.9998 10.667C18.9438 10.667 21.3332 13.0563 21.3332 16.0003C21.3332 18.9443 18.9438 21.3337 15.9998 21.3337C13.0558 21.3337 10.6665 18.9443 10.6665 16.0003C10.6665 13.0563 13.0558 10.667 15.9998 10.667ZM15.9998 12.667C17.8398 12.667 19.3332 14.1603 19.3332 16.0003C19.3332 17.8403 17.8398 19.3337 15.9998 19.3337C14.1598 19.3337 12.6665 17.8403 12.6665 16.0003C12.6665 14.1603 14.1598 12.667 15.9998 12.667Z" fill="#202020"/>
-            </svg>
-            <svg class="hide-password-icon" data-show-password-target="hideIcon" style="display: none;" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <line x1="7.64315" y1="28.4933" x2="20.0066" y2="2.2608" stroke="#202020" stroke-width="3"/>
-              <path d="M22.1016 8.34375C25.0132 9.96161 27.4726 12.565 29.1494 15.3242C29.2719 15.5321 29.333 15.7668 29.333 16C29.333 16.2334 29.272 16.4688 29.1494 16.6768C26.392 21.2141 21.521 25.334 15.9971 25.334C15.3793 25.334 14.7692 25.2778 14.168 25.1768L15.9795 21.333C15.9863 21.333 15.9932 21.334 16 21.334C18.9439 21.3339 21.333 18.9439 21.333 16C21.3329 14.7041 20.8691 13.5162 20.0996 12.5918L22.1016 8.34375ZM15.9971 6.66699C17.1437 6.66699 18.2615 6.84701 19.3389 7.16895L17.5781 10.9053C17.0793 10.7508 16.5494 10.667 16 10.667C13.0561 10.667 10.6672 13.0561 10.667 16C10.667 17.864 11.6252 19.5052 13.0752 20.459L11.2617 24.3047C7.797 22.8028 4.8234 19.8435 2.8584 16.6895C2.73049 16.4775 2.66602 16.2386 2.66602 16C2.66607 15.7615 2.73143 15.5225 2.85938 15.3105C5.67402 10.7906 10.5598 6.66706 15.9971 6.66699ZM19.0859 14.7422C19.2445 15.1305 19.333 15.5549 19.333 16C19.333 17.494 18.3484 18.7594 16.9932 19.1826L19.0859 14.7422ZM16 12.667C16.244 12.667 16.4818 12.6933 16.7109 12.7432L13.9414 18.6201C13.1659 18.0094 12.667 17.0629 12.667 16C12.6672 14.1601 14.1601 12.667 16 12.667Z" fill="#202020"/>
-            </svg>
-          </button>
+          <button type="button" data-action="click->show-password#toggle" class="toggle-password">
+            </button>
         </div>
       </div>
+      
       <% if !resource.provider.present? %>
         <hr>
         <div class="field">
@@ -216,29 +233,22 @@
         autocomplete: "current-password", 
         id: "password-field-3", 
         data: { "show-password-target": "passwordField" } %>
-            <button type="button" 
-          data-action="click->show-password#toggle"
-              class="toggle-password">
-              <svg class="show-password-icon" data-show-password-target="showIcon" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M15.9972 6.66699C10.5598 6.66699 5.6745 10.791 2.85984 15.311C2.73184 15.523 2.6665 15.7617 2.6665 16.0003C2.6665 16.239 2.7305 16.4777 2.8585 16.6897C5.6745 21.2097 10.5598 25.3337 15.9972 25.3337C21.5212 25.3337 26.3918 21.2137 29.1492 16.6763C29.2718 16.4683 29.3332 16.2337 29.3332 16.0003C29.3332 15.767 29.2718 15.5323 29.1492 15.3243C26.3918 10.787 21.5212 6.66699 15.9972 6.66699ZM15.9998 10.667C18.9438 10.667 21.3332 13.0563 21.3332 16.0003C21.3332 18.9443 18.9438 21.3337 15.9998 21.3337C13.0558 21.3337 10.6665 18.9443 10.6665 16.0003C10.6665 13.0563 13.0558 10.667 15.9998 10.667ZM15.9998 12.667C17.8398 12.667 19.3332 14.1603 19.3332 16.0003C19.3332 17.8403 17.8398 19.3337 15.9998 19.3337C14.1598 19.3337 12.6665 17.8403 12.6665 16.0003C12.6665 14.1603 14.1598 12.667 15.9998 12.667Z" fill="#202020"/>
-              </svg>
-              <svg class="hide-password-icon" data-show-password-target="hideIcon" style="display: none;" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <line x1="7.64315" y1="28.4933" x2="20.0066" y2="2.2608" stroke="#202020" stroke-width="3"/>
-                <path d="M22.1016 8.34375C25.0132 9.96161 27.4726 12.565 29.1494 15.3242C29.2719 15.5321 29.333 15.7668 29.333 16C29.333 16.2334 29.272 16.4688 29.1494 16.6768C26.392 21.2141 21.521 25.334 15.9971 25.334C15.3793 25.334 14.7692 25.2778 14.168 25.1768L15.9795 21.333C15.9863 21.333 15.9932 21.334 16 21.334C18.9439 21.3339 21.333 18.9439 21.333 16C21.3329 14.7041 20.8691 13.5162 20.0996 12.5918L22.1016 8.34375ZM15.9971 6.66699C17.1437 6.66699 18.2615 6.84701 19.3389 7.16895L17.5781 10.9053C17.0793 10.7508 16.5494 10.667 16 10.667C13.0561 10.667 10.6672 13.0561 10.667 16C10.667 17.864 11.6252 19.5052 13.0752 20.459L11.2617 24.3047C7.797 22.8028 4.8234 19.8435 2.8584 16.6895C2.73049 16.4775 2.66602 16.2386 2.66602 16C2.66607 15.7615 2.73143 15.5225 2.85938 15.3105C5.67402 10.7906 10.5598 6.66706 15.9971 6.66699ZM19.0859 14.7422C19.2445 15.1305 19.333 15.5549 19.333 16C19.333 17.494 18.3484 18.7594 16.9932 19.1826L19.0859 14.7422ZM16 12.667C16.244 12.667 16.4818 12.6933 16.7109 12.7432L13.9414 18.6201C13.1659 18.0094 12.667 17.0629 12.667 16C12.6672 14.1601 14.1601 12.667 16 12.667Z" fill="#202020"/>
-              </svg>
-            </button>
+            <button type="button" data-action="click->show-password#toggle" class="toggle-password">
+              </button>
           </div>
         </div>
       <%end%>
-     <div class="field rgpd" style="flex-direction: row; gap: 10px;">
+      
+      <div class="field rgpd" style="flex-direction: row; gap: 10px;">
           <%= f.check_box :newsletter, class: "checkbox-input", id: "user_newsletter" %>
           <%= f.label :newsletter, "Je souhaite recevoir les actualités et nouveautés d'Omniscient Design", style: "margin: 0; cursor: pointer;", for: "user_newsletter" %>
-        </div>
+      </div>
       <div class="actions">
         <%= f.submit  t('edit_profile.update_button'), class: "button large maj dark" %>
       </div>
     </div>
   <% end %>
+
   <div style="display:flex" data-controller="popup">
     <button type="button" class="button delete delete-account" data-action="click->popup#open">
       <%= t('edit_profile.delete_account') %>
